# contour

./: CMakeLists.txt  README.md
include/: ArcSegment.h  Contour.h  LineSegment.h  MathUtils.h  Segment.h
src/: ArcSegment.cpp  Contour.cpp  LineSegment.cpp  MathUtils.cpp  main.cpp
tests/: ContourTests.cpp
